--- a/firebase.json
+++ b/firebase.json
@@ -12,11 +12,9 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": [{
+      "source": "/api/v1/**",
+      "function": "webApi"
+    }]
   }
 }
