--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,15 @@ language: node_js
 
 node_js:
   - 8
+
 before_install:
-  - npm i -g firebase-tools
+  - npm install -g firebase-tools
 install:
   - cd function && npm install
+
 script:
   - firebase deploy --token "$FIREBASE_TOKEN"
+
 notifications:
   email:
     on_failure: change
